# foveated_stereo_ros

./: .gitmodules  CMakeLists.txt  CMakeLists.txt~  README.md  foveated_stereo_nodelets.xml  frames.gv  package.xml  package.xml~
action/: Gaze.action
config/: decision_making.yaml  egosphere.yaml  frames.yaml  params.yaml  params.yaml~  stereo_params.yaml  stereo_params.yaml~  test.yaml
data/: ego_sphere_nodes_10000_angle_bins_100
include/: AcquisitionFunction.h  DecisionMaking.h  EgoSphereManagerRos.h  ExpectedImprovement.h  PerfectStereoCalibrationRos.h  ProbabilityOfImprovement.h  StereoCalibrationRos.h  StereoRos.h  UpperConfidenceBound.h
include/bayesian_filtering/: nonlinearanalyticconditionalgaussian3D.h
include/nodelets/: ConventionalStereoRosNodelet.h  FoveatedStereoRosNodelet.h  PeripheralFovealStereoRosNodelet.h  PeripheralStereoRosNodelet.h
launch/: conventional_stereo_ros.launch  foveal_stereo_ros.launch  foveated_stereo_ros.launch  foveated_stereo_ros.launch~  gaze.launch  octomap_server.launch  peripheral_stereo_ros.launch  stereo_calibration.launch  test.launch  test2.launch  teste2.launch
lib/covSampler/: CMakeLists.txt  README.txt  cmakeCodeBlocks.sh
lib/covSampler/covSamplerLib/: CMakeLists.txt
lib/covSampler/covSamplerLib/include/: covSampling.hpp
lib/covSampler/covSamplerLib/src/: covSampling.cpp
lib/covSampler/covSamplerTester/: CMakeLists.txt  covSamplerTester.cpp
msg/: Covariance.msg  EgoData.msg  Information.msg  PointClouds.msg  Stereo.msg  StereoData.msg
src/: AcquisitionFunction.cpp  ConventionalStereoRos.cpp  ConventionalStereoRos.h  ConventionalStereoRosNodelet.cpp  ConventionalStereoRosNodelet.h  DecisionMaking.cpp  EgoSphereManagerRos.cpp  EgoSphereManagerRos.h  EgoSphereManagerRosNodelet.cpp  EgoSphereManagerRosNodelet.h  ExpectedImprovement.cpp  ExpectedImprovement.h  FoveatedStereoRos.cpp  FoveatedStereoRos.h  FoveatedStereoRosNodelet.cpp  FoveatedStereoRosNodelet.h  Gaze.cpp  Gaze.h  GazeClient.cpp  GazeClient.h  PerfectStereoCalibrationRos.cpp  PerfectStereoCalibrationRos.h  PeripheralFovealStereoRos.cpp  PeripheralStereoRos.cpp  ProbabilityOfImprovement.cpp  ProbabilityOfImprovement.h  StereoCalibrationRos.cpp  StereoCalibrationRos.h  StereoRos.cpp  StereoRos.h  StereoRosNodelet.cpp  StereoRosNodelet.h  UpperConfidenceBound.cpp  foveated_stereo_ros_node.cpp  teste.cpp  testiculo.cpp
src/bayesian_filtering/: nonlinearanalyticconditionalgaussian3D.cpp  nonlinearsystempdf.cpp
src/bayesian_filtering/test/: BayesianFilterNode.cpp  BayesianFilterNode.h  mobile_robot.cpp  mobile_robot.h  mobile_robot_wall_cts.h  test_nonlinear_kalman.cpp
src/nodelets/: EgoSphereManagerRosNodelet.cpp  FoveatedStereoRosNodelet.cpp  PeripheralFovealStereoRosNodelet.cpp  PeripheralStereoRosNodelet.cpp
src/tracker_test/: tracker.cpp  tracker.h  tracker_node.cpp  tracker_node.h
srv/: GazeTarget.srv
